[package]
name = "monke"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.44.2", features = ["full"] }
dotenv = "0.15.0"
poise = "0.6.1"
rand = "0.9.0"
serenity = { version = "0.12.4", features = [
    "client",
    "gateway",
    "rustls_backend",
    "model",
] }
reqwest = { version = "0.12.15", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
